--- a/angular-part06-rotas/src/index.html
+++ b/angular-part06-rotas/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>AngularPart06Rotas</title>
-  <base href="/">
+  <base href="/rotas">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
